ci: replace custom action for building and serving openvidu-components-angular Testapp with official OpenVidu action

--- a/.github/workflows/openvidu-components-angular-tests.yml
+++ b/.github/workflows/openvidu-components-angular-tests.yml
@@ -73,13 +73,7 @@ jobs:
           cd openvidu-components-angular
           npm install
       - name: Build and Serve openvidu-components-angular Testapp
-        uses: ./.github/actions/build-and-serve-components-testapp
-      - name: Wait for openvidu-components-angular Testapp
-        run: |
-          until curl -s -f -o /dev/null http://localhost:4200; do
-            echo "Waiting for openvidu-components-angular Testapp to be ready..."
-            sleep 5
-          done
+        uses: OpenVidu/actions/start-openvidu-components-testapp
       - name: Run nested components E2E event tests
         env:
           LAUNCH_MODE: CI
@@ -112,7 +106,7 @@ jobs:
       - name: Start OpenVidu Call backend
         uses: OpenVidu/actions/start-openvidu-call@main
       - name: Build and Serve openvidu-components-angular Testapp
-        uses: ./.github/actions/build-and-serve-components-testapp
+        uses: OpenVidu/actions/start-openvidu-components-testapp
       - name: Run nested structural directives tests
         env:
           LAUNCH_MODE: CI
@@ -145,7 +139,7 @@ jobs:
       - name: Start OpenVidu Call backend
         uses: OpenVidu/actions/start-openvidu-call@main
       - name: Build and Serve openvidu-components-angular Testapp
-        uses: ./.github/actions/build-and-serve-components-testapp
+        uses: OpenVidu/actions/start-openvidu-components-testapp
       - name: Run nested attribute directives tests
         env:
           LAUNCH_MODE: CI
@@ -178,7 +172,7 @@ jobs:
       - name: Start OpenVidu Call backend
         uses: OpenVidu/actions/start-openvidu-call@main
       - name: Build and Serve openvidu-components-angular Testapp
-        uses: ./.github/actions/build-and-serve-components-testapp
+        uses: OpenVidu/actions/start-openvidu-components-testapp
       - name: Run Tests
         env:
           LAUNCH_MODE: CI
@@ -211,7 +205,7 @@ jobs:
       - name: Start OpenVidu Call backend
         uses: OpenVidu/actions/start-openvidu-call@main
       - name: Build and Serve openvidu-components-angular Testapp
-        uses: ./.github/actions/build-and-serve-components-testapp
+        uses: OpenVidu/actions/start-openvidu-components-testapp
       - name: Run Tests
         env:
           LAUNCH_MODE: CI
@@ -244,7 +238,7 @@ jobs:
       - name: Start OpenVidu Call backend
         uses: OpenVidu/actions/start-openvidu-call@main
       - name: Build and Serve openvidu-components-angular Testapp
-        uses: ./.github/actions/build-and-serve-components-testapp
+        uses: OpenVidu/actions/start-openvidu-components-testapp
       - name: Run Tests
         env:
           LAUNCH_MODE: CI
@@ -277,7 +271,7 @@ jobs:
       - name: Start OpenVidu Call backend
         uses: OpenVidu/actions/start-openvidu-call@main
       - name: Build and Serve openvidu-components-angular Testapp
-        uses: ./.github/actions/build-and-serve-components-testapp
+        uses: OpenVidu/actions/start-openvidu-components-testapp
       - name: Run Tests
         env:
           LAUNCH_MODE: CI
@@ -310,7 +304,7 @@ jobs:
       - name: Start OpenVidu Call backend
         uses: OpenVidu/actions/start-openvidu-call@main
       - name: Build and Serve openvidu-components-angular Testapp
-        uses: ./.github/actions/build-and-serve-components-testapp
+        uses: OpenVidu/actions/start-openvidu-components-testapp
       - name: Run Tests
         env:
           LAUNCH_MODE: CI
@@ -343,7 +337,7 @@ jobs:
       - name: Start OpenVidu Call backend
         uses: OpenVidu/actions/start-openvidu-call@main
       - name: Build and Serve openvidu-components-angular Testapp
-        uses: ./.github/actions/build-and-serve-components-testapp
+        uses: OpenVidu/actions/start-openvidu-components-testapp
       - name: Run Tests
         env:
           LAUNCH_MODE: CI
@@ -376,7 +370,7 @@ jobs:
       - name: Start OpenVidu Call backend
         uses: OpenVidu/actions/start-openvidu-call@main
       - name: Build and Serve openvidu-components-angular Testapp
-        uses: ./.github/actions/build-and-serve-components-testapp
+        uses: OpenVidu/actions/start-openvidu-components-testapp
       - name: Run Tests
         env:
           LAUNCH_MODE: CI
@@ -409,7 +403,7 @@ jobs:
       - name: Start OpenVidu Call backend
         uses: OpenVidu/actions/start-openvidu-call@main
       - name: Build and Serve openvidu-components-angular Testapp
-        uses: ./.github/actions/build-and-serve-components-testapp
+        uses: OpenVidu/actions/start-openvidu-components-testapp
       - name: Run Webcomponent E2E
         env:
           LAUNCH_MODE: CI
