openvidu-deployment: Add "Additional Installer Flag"

--- a/openvidu-deployment/pro/ha/aws/cf-openvidu-ha.yaml
+++ b/openvidu-deployment/pro/ha/aws/cf-openvidu-ha.yaml
@@ -330,6 +330,13 @@ Parameters:
     Type: String
     Description: Name of the S3 bucket to store cluster data. If empty, a bucket will be created
 
+  AdditionalInstallFlags:
+    Description: Additional optional flags to pass to the OpenVidu installer (comma-separated, e.g., "--flag1=value, --flag2").
+    Type: String
+    Default: ""
+    AllowedPattern: '^[A-Za-z0-9, =_.\-]*$'  # Allows letters, numbers, comma, space, underscore, dot, equals, and hyphen
+    ConstraintDescription: Must be a comma-separated list of flags (for example, --flag=value, --bool-flag).
+
   OpenViduVPC:
     Description: "Dedicated VPC for OpenVidu cluster"
     Type: AWS::EC2::VPC::Id
@@ -397,6 +404,10 @@ Metadata:
           default: Volumes configuration
         Parameters:
           - MasterNodesDiskSize
+      - Label:
+          default: "(Optional) Additional Installer Flags"
+        Parameters:
+          - AdditionalInstallFlags
       - Label:
           default: (Optional) TURN server configuration with TLS
         Parameters:
@@ -953,6 +964,18 @@ Resources:
                   "--livekit-api-key=$LIVEKIT_API_KEY"
                   "--livekit-api-secret=$LIVEKIT_API_SECRET"
                 )
+
+                # Include additional installer flags provided by the user
+                if [[ "${AdditionalInstallFlags}" != "" ]]; then
+                  IFS=',' read -ra EXTRA_FLAGS <<< "${AdditionalInstallFlags}"
+                  for extra_flag in "${!EXTRA_FLAGS[@]}"; do
+                    # Trim whitespace around each flag
+                    extra_flag="$(echo -e "${!extra_flag}" | sed -e 's/^[ \t]*//' -e 's/[ \t]*$//')"
+                    if [[ "$extra_flag" != "" ]]; then
+                      COMMON_ARGS+=("$extra_flag")
+                    fi
+                  done
+                fi
 
                 if [[ "${!LIVEKIT_TURN_DOMAIN_NAME}" != "none" ]]; then
                   COMMON_ARGS+=("--turn-domain-name='${!LIVEKIT_TURN_DOMAIN_NAME}'")
