--- a/openvidu-deployment/pro/elastic/aws/cf-openvidu-elastic.yaml
+++ b/openvidu-deployment/pro/elastic/aws/cf-openvidu-elastic.yaml
@@ -41,6 +41,13 @@ Parameters:
     Description: "If certificate type is 'letsencrypt', this email will be used for Let's Encrypt notifications"
     Type: String
 
+  AdditionalInstallFlags:
+    Description: Additional optional flags to pass to the OpenVidu installer (comma-separated, e.g., "--flag1=value, --flag2").
+    Type: String
+    Default: ""
+    AllowedPattern: '^[A-Za-z0-9, =_.\-]*$'  # Allows letters, numbers, comma, space, underscore, dot, equals, and hyphen
+    ConstraintDescription: Must be a comma-separated list of flags (for example, --flag=value, --bool-flag).
+
   TurnDomainName:
     Description: '(Optional) Domain name for the TURN server with TLS. Only needed if your users are behind restrictive firewalls'
     Type: String
@@ -418,6 +425,10 @@ Metadata:
           - OpenViduMasterNodeSubnet
           - OpenViduMediaNodeSubnets
       - Label:
+          default: "(Optional) Additional Installer Flags"
+        Parameters:
+          - AdditionalInstallFlags
+      - Label:
           default: (Optional) TURN server configuration with TLS
         Parameters:
           - TurnDomainName
@@ -764,6 +775,18 @@ Resources:
                   "--livekit-api-key=$LIVEKIT_API_KEY"
                   "--livekit-api-secret=$LIVEKIT_API_SECRET"
                 )
+
+                # Include additional installer flags provided by the user
+                if [[ "${AdditionalInstallFlags}" != "" ]]; then
+                  IFS=',' read -ra EXTRA_FLAGS <<< "${AdditionalInstallFlags}"
+                  for extra_flag in "${!EXTRA_FLAGS[@]}"; do
+                    # Trim whitespace around each flag
+                    extra_flag="$(echo -e "${!extra_flag}" | sed -e 's/^[ \t]*//' -e 's/[ \t]*$//')"
+                    if [[ "$extra_flag" != "" ]]; then
+                      COMMON_ARGS+=("$extra_flag")
+                    fi
+                  done
+                fi
 
                 # Turn with TLS
                 if [[ "${TurnDomainName}" != '' ]]; then
