--- a/openvidu-testapp/package.json
+++ b/openvidu-testapp/package.json
@@ -14,8 +14,8 @@
     "colormap": "2.3.2",
     "core-js": "3.26.1",
     "json-stringify-safe": "5.0.1",
-    "openvidu-browser-v2compatibility": "3.1.0-dev2",
-    "openvidu-node-client-v2compatibility": "3.0.1-beta1",
+    "openvidu-browser-v2compatibility": "3.3.0",
+    "openvidu-node-client-v2compatibility": "3.3.0",
     "rxjs": "7.8.1",
     "tslib": "2.4.1",
     "zone.js": "0.13.3"
