--- a/openvidu-testapp/tsconfig.json
+++ b/openvidu-testapp/tsconfig.json
@@ -13,10 +13,12 @@
       "node_modules/@types"
     ],
     "lib": [
-      "es2017",
+      "ES2022",
       "dom",
       "ES2021.WeakRef"
     ],
+    "types": ["node"],
+    "skipLibCheck": true,
     "useDefineForClassFields": false
   }
 }
